# Pocket_fantasy

./: .gitignore  CLAUDE.md  README.md  README.zh.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/example/ppo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/prompt/: character_prompts.json  ff.json  fm.json  mf.json  mm.json
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/ppo/: CharacterModel.kt  CharacterSelectionActivity.kt  GameViewModel.kt  LandingActivity.kt  LlamaEngine.kt  Loaders.kt  MainActivity.kt  MemoryRecord.kt  NovelIndex.kt  PromptEditor.kt  PromptTemplates.kt  StoryPools.kt  SystemPromptBuilder.kt  TutorialBanner.kt
app/src/main/java/com/example/ppo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ppo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
